--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "redux": "^4.0.5",
     "sass": "^1.25.0",
     "sass-loader": "^8.0.2"
   }
